--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,24 @@
                 <h1> UserDetails </h1>
                 <!-- <label for="username">UserName</label> -->
                 <input name = "username" id = "username" placeholder="Enter your Name" required/>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type = "submit" class = "btn btn-primary">Submit</button>
             </form>
         </div>
+        <div class="groceryList">
+          <h1>Grocery List</h1>
+          <div class="listForm">
+            <form onsubmit="addItem(event)">
+              <input type="text" placeholder="Enter the item to be added" required />
+              <h7 class="remainingItems"></h7>
+              <button type="submit" class="btn btn-primary">Add Item</button>
+            </form>
+          </div>
+          <div class="displayItems">
+              
+          </div>
+        </div>
+        <!-- <span onchange=""></span> -->
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
