--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
         </div>
         <div class="groceryList">
           <h1>Grocery List</h1>
+          <div>
+            <button class="btn btn-primary" style="float: right;" onclick="logout()">Logout</button  >
+          </div>
           <div class="listForm">
             <form id = "addItemForm" onsubmit="addItem(event)">
               <input type="text" placeholder="Enter the item to be added" required />
